# PyFR

./: .gitignore
examples/couette_flow_2d/: couette_flow_2d.ini  test.c
examples/euler_vortex_2d/: euler_vortex_2d.ini
examples/hexahedron/: 26.msh  small.ini
pyfr/: ctypesutil.py
pyfr-catalyst/: ArrayChoice.h  ArrayHandleExposed.h  ArrayHandleVTK.h  CMakeLists.txt  CatalystData.h  Field.h  FieldData.cxx  FieldData.h  PyFRAdaptor.cu  PyFRAdaptor.cxx  PyFRAdaptor.h  PyFRContourData.cu  PyFRContourData.h  PyFRData.cu  PyFRData.h  PyFRDataContourFilter.cu  PyFRDataContourFilter.h  PyFRDataWriter.cu  field.h  vtkCPVTKPipeline.cxx  vtkCPVTKPipeline.h  vtkCPVTKmPipeline.cu  vtkCPVTKmPipeline.h  vtkPyFRAlgorithm.h  vtkPyFRContourData.cxx  vtkPyFRContourData.h  vtkPyFRContourDataAlgorithm.cu  vtkPyFRContourDataAlgorithm.h  vtkPyFRData.h  vtkPyFRDataAlgorithm.cu  vtkPyFRDataAlgorithm.h  vtkPyFRDataContourFilter.cu  vtkPyFRDataContourFilter.h  vtkPyFRPipeline.h  vtkXMLPyFRContourDataWriter.cu  vtkXMLPyFRContourDataWriter.h  vtkXMLPyFRDataWriter.cu  vtkXMLPyFRDataWriter.cxx  vtkXMLPyFRDataWriter.h
pyfr-catalyst/Data/: CMakeLists.txt  wall.vtu
pyfr-catalyst/Macros/: CMakeLists.txt  Preset1.py  Preset2.py  Preset3.py
pyfr-catalyst/Source/: CMakeLists.txt
pyfr-catalyst/Source/PyFR/: CMakeLists.txt  ColorTable.h  CrinkleClip.h  IsosurfaceHexahedra.h  PyFRContour.cu  PyFRContour.h  PyFRContourData.cu  PyFRContourData.h  PyFRContourFilter.cu  PyFRContourFilter.h  PyFRConverter.cu  PyFRConverter.h  PyFRCrinkleClipFilter.cu  PyFRCrinkleClipFilter.h  PyFRData.cu  PyFRData.h  PyFRDataContourFilter.cu  PyFRDataContourFilter.h  PyFRDataConverter.cu  PyFRDataConverter.h  PyFRDataWriter.cu  PyFRDataWriter.h  PyFRParallelSliceFilter.cu  PyFRParallelSliceFilter.h  vtkmOpenGLVBO.cu  vtkmOpenGLVBO.h
pyfr-catalyst/Source/PyFRStub/: PyFRContourData.h  PyFRContourFilter.h  PyFRCrinkleClipFilter.h  PyFRParallelSliceFilter.h
pyfr-catalyst/Source/vtkPyFR/: CMakeLists.txt  PyFR.xml  vtkPYFrIndexBufferObject.cxx  vtkPYFrIndexBufferObject.h  vtkPYFrVertexBufferObject.cxx  vtkPYFrVertexBufferObject.h  vtkPyFRAdaptor.cxx  vtkPyFRAdaptor.h  vtkPyFRContourData.cxx  vtkPyFRContourData.h  vtkPyFRContourDataConverter.cxx  vtkPyFRContourDataConverter.h  vtkPyFRContourFilter.cxx  vtkPyFRContourFilter.h  vtkPyFRContourMapper.cxx  vtkPyFRContourMapper.h  vtkPyFRCrinkleClipFilter.cxx  vtkPyFRCrinkleClipFilter.h  vtkPyFRDataContourFilter.cxx  vtkPyFRDataContourFilter.h  vtkPyFRDataConverter.cxx  vtkPyFRDataConverter.h  vtkPyFRIndexBufferObject.cxx  vtkPyFRIndexBufferObject.h  vtkPyFRMapper.cxx  vtkPyFRMapper.h  vtkPyFRParallelSliceFilter.cxx  vtkPyFRParallelSliceFilter.h  vtkPyFRPipeline.cxx  vtkPyFRPipeline.h  vtkPyFRTrivialProducer.cxx  vtkPyFRTrivialProducer.h  vtkPyFRVertexBufferObject.cxx  vtkPyFrContourMapper.h  vtkXMLPyFRContourDataWriter.cxx  vtkXMLPyFRDataWriter.h
pyfr/backends/: __init__.py
pyfr/plugins/: __init__.py  catalyst.py
